src/components/ChatBotContainer.css
/* Package Globals */

.rcb-chatbot-global {
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	line-height: 1.5;
}

/* ChatBot Commons */


/* Chat Window */

.rcb-chat-window {
	position: fixed;
	right: 20px;
	bottom: 20px;
	border-radius: 10px;
	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
	background-color: #fff;
	transition: all 0.3s ease;
	overflow: hidden;
	display: flex;
	flex-direction: column;
	width: 375px;
	height: 550px;
	z-index: 10000;
}

.rcb-window-embedded .rcb-chat-window {
	position: static;
	opacity: 1;
	visibility: visible;
	right: auto;
	bottom: auto;
}

.rcb-window-open .rcb-chat-window {
	opacity: 1;
	visibility: visible;
	animation: rcb-animation-expand 0.3s ease-in-out forwards;
}

.rcb-window-close .rcb-chat-window {
	opacity: 0;
	visibility: hidden;
	animation: rcb-animation-collapse 0.3s ease-in-out forwards;
}

/* Animations used throughout the entire chatbot */

@keyframes rcb-animation-expand {
	0% {
		transform: translate(100%, 100%) scale(0);
		opacity: 0;
	}
	100% {
		transform: translate(0, 0) scale(1);
		opacity: 1;
	}
}

@keyframes rcb-animation-collapse {
	0% {
		transform: translate(0, 0) scale(1);
		opacity: 1;
	}
	100% {
		transform: translate(100%, 100%) scale(0);
		opacity: 0;
	}
}

@keyframes rcb-animation-ping {
    0% {
        filter: brightness(100%);
        opacity: 1;
    }
    50% {
        filter: brightness(50%);
        opacity: 0.8;
    }
}

@keyframes rcb-animation-bot-message-entry {
	0% {
		transform: translate(-100%, 50%) scale(0);
		opacity: 0;
	}
	100% {
		transform: translate(0, 0) scale(1);
		opacity: 1;
	}
}

@keyframes rcb-animation-user-message-entry {
	0% {
		transform: translate(100%, 50%) scale(0);
		opacity: 0;
	}
	100% {
		transform: translate(0, 0) scale(1);
		opacity: 1;
	}
}

@keyframes rcb-animation-bot-typing {
	0% {
		opacity: 0.4;
	}
	50% {
		opacity: 1
	}
	100% {
		opacity: 0.4;
	}
}

@keyframes rcb-animation-pop-in {
	0% {
		transform: scale(0.8);
		opacity: 0;
	}
	70% {
		transform: scale(1.1);
		opacity: 1;
	}
	100% {
		transform: scale(1);
	}
}

@keyframes rcb-animations-checkboxes-entry {
	0% {
	  transform: translateX(-100%);
	  opacity: 0;
	}
	100% {
	  transform: translateX(0);
	  opacity: 1;
	}
}

@keyframes rcb-animation-options-entry {
	0% {
	  transform: scale(0);
	  opacity: 0;
	}
	100% {
	  transform: scale(1);
	  opacity: 1;
	}
}

@keyframes rcb-animation-tooltip-in {
	0% {
	  opacity: 0;
	  transform: translateY(-5px);
	}
	100% {
	  opacity: 1;
	  transform: translateY(0);
	}
  }
  
@keyframes rcb-animation-tooltip-out {
	0% {
	  opacity: 1;
	  transform: translateY(0);
	}
	100% {
	  opacity: 0;
	  transform: translateY(-5px);
	}
}

@keyframes rcb-animation-spin {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(360deg);
	}
}

